--- a/frontend/notes-app/src/index.css
+++ b/frontend/notes-app/src/index.css
@@ -29,4 +29,8 @@
         @apply text-xl text-slate-300 cursor-pointer hover:text-primary;
 
     }
+
+    .input-label {
+        @apply text-xs text-slate-400
+    }
 }
